# rs-ia

./: Cargo.toml  README.md  tsconfig.json
pkg/: brain.nn  config.yaml
src/: main.rs
src/ai/: ai.rs  mod.rs
src/ai/brain/: actions.rs  brain.rs  epoch.rs  mod.rs  orchestrator.rs  storage.rs
src/ai/config/: config.rs  mod.rs
src/ws/: mod.rs  ws.rs
src/ws/web/assets/css/: main.css
src/ws/web/assets/js/: main.js
src/ws/web/assets/ts/: main.ts
src/ws/web/pages/: index.html
