[package]
name = "rs-ia"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
ndarray = { version = "0.15", features = ["serde"] }
rand_distr = "0.4"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
